Like the previous

--- a/UniversityProjects/10_Покупатели_и_заказы/Product_Warehouse/Product_Warehouse/Product_Warehouse.csproj
+++ b/UniversityProjects/10_Покупатели_и_заказы/Product_Warehouse/Product_Warehouse/Product_Warehouse.csproj
@@ -104,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Administrator.cs" />
+    <Compile Include="BaseUser.cs" />
     <Compile Include="CSVNumForm.cs">
       <SubType>Form</SubType>
     </Compile>
