--- a/UniversityProjects/11_ASP_сервис_сообщений/MessageService/MessageService/MessageService.csproj
+++ b/UniversityProjects/11_ASP_сервис_сообщений/MessageService/MessageService/MessageService.csproj
@@ -4,9 +4,18 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\my_programms\Student_Projects\UniversityProjects\11_ASP_сервис_сообщений\MessageService\MessageService\MessageService.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="data\" />
+  </ItemGroup>
+
 
 </Project>
